feat: variables for emailer

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ DB_HOST='localhost'
 DB_USER='root'
 DB_PASSWORD=''
 DB_NAME='dbsmartschedule'
+EMAIL_USER=smartschedule.bulsu@gmail.com
+EMAIL_PASS=cpso yzyx fual yzai
